--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.8
   # 암호화
   crypto: ^3.0.6
+  encrypt: ^5.0.3
+  bcrypt: ^1.1.3
 
 dev_dependencies:
   flutter_test:
