--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>App</string>
+	<string>마음톡톡</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,6 +26,14 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>이미지 업로드 및 프로필 이미지 편집을 위해 이 앱에서 카메라에 접근을 하려고 합니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>이 앱에서 마이크에 접근을 하려고 합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>이미지 업로드 및 프로필 이미지 편집을 위해 이 앱에서 갤러리에 접근을 하려고 합니다.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,16 +51,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	
-	<key>NSCameraUsageDescription</key>
-    <string>이미지 업로드 및 프로필 이미지 편집을 위해 이 앱에서 카메라에 접근을 하려고 합니다.</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>이 앱에서 마이크에 접근을 하려고 합니다.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>이미지 업로드 및 프로필 이미지 편집을 위해 이 앱에서 갤러리에 접근을 하려고 합니다.</string>
 </dict>
 </plist>
