--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "마음톡톡 앱 - 부정감정 완화 LLM 연구 (김재정)"
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.2+18
+version: 1.0.3+19
 
 environment:
   sdk: ^3.7.0
@@ -39,6 +39,8 @@ dependencies:
   crypto: ^3.0.6
   encrypt: ^5.0.3
   bcrypt: ^1.1.3
+  # 초대코드 요청 발급을 위한 URL
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
